[gd_scene load_steps=10 format=3 uid="uid://c3cb74tbqksst"]

[ext_resource type="Script" path="res://ui/gameover/gameover.gd" id="1_bt6aj"]
[ext_resource type="Script" path="res://ui/common/hover_button.gd" id="1_lgch2"]
[ext_resource type="PackedScene" uid="uid://bosl3sol5un47" path="res://ui/main_menu/components/cursor/cursor.tscn" id="1_mwnp4"]
[ext_resource type="PackedScene" uid="uid://c0y8auhbdkbi2" path="res://silent_wolf/leaderboard/leaderboard.tscn" id="4_b545m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f2pju"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j4deu"]

[sub_resource type="Animation" id="Animation_81mf3"]
resource_name = "end_screen"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Stats/StatsList:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Leaderboard:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cursor:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"refocus"
}]
}

[sub_resource type="Animation" id="Animation_qvnnk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Stats/StatsList:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Leaderboard:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cursor:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gs8ki"]
_data = {
"RESET": SubResource("Animation_qvnnk"),
"end_screen": SubResource("Animation_81mf3")
}

[node name="Gameover" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bt6aj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_f2pju")
text = "RESTART"
flat = true
script = ExtResource("1_lgch2")

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_j4deu")
text = "BACK TO MAIN MENU"
flat = true
script = ExtResource("1_lgch2")

[node name="Cursor" parent="." instance=ExtResource("1_mwnp4")]
visible = false
offset_left = 960.0
offset_top = 536.0
offset_right = 960.0
offset_bottom = 536.0
grow_horizontal = 1
grow_vertical = 1

[node name="Leaderboard" parent="." instance=ExtResource("4_b545m")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
offset_left = -595.0
grow_horizontal = 0

[node name="Stats" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 693.0
grow_vertical = 2

[node name="StatsList" type="VBoxContainer" parent="Stats"]
visible = false
layout_mode = 2

[node name="StatsTitle" type="Label" parent="Stats/StatsList"]
layout_mode = 2
text = "Stats"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "end_screen"
libraries = {
"": SubResource("AnimationLibrary_gs8ki")
}

[connection signal="sort_children" from="CenterContainer/VBoxContainer/Buttons" to="." method="_on_buttons_sort_children"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/RestartButton" to="." method="_on_button_pressed" binds= ["restart"]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/BackButton" to="." method="_on_button_pressed" binds= ["back"]]
